<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <RelativeLayout
                android:id="@+id/relLayout_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

            <TextView
                    android:id="@+id/email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="12dp"
                    android:text="@string/register_email_title"
                    android:textColor="@color/text_edit_color"
                    android:textSize="24sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent" />

        </RelativeLayout>
        <FrameLayout android:id="@+id/root"

                android:layout_width="match_parent"
                android:layout_height="match_parent" >

            <com.example.dobble.release.extensions.ui.EmailValidatableEditText
                    android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="48dp"
                    android:layout_marginRight="48dp"
                    android:hint="@string/register_email_placeholder"
                    android:inputType="textMultiLine|textVisiblePassword"
                    android:textColor="@color/text_edit_color"
                    android:textColorHint="@color/text_edit_placeholder_color"
                    />

            <ProgressBar
                    android:id="@+id/progress"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:layout_marginStart="320dp"
                    android:visibility="invisible"
                    android:layout_marginTop="8dp" />

        </FrameLayout>


        <TextView
                android:id="@+id/email_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:textColor="@color/validatable_edit_text_border_false"
                android:textSize="18sp"
                android:visibility="invisible"
                android:layout_marginStart="48dp"
                app:layout_constraintLeft_toLeftOf="@+id/input_email"
                app:layout_constraintRight_toRightOf="parent" />

        <RelativeLayout
                android:id="@+id/relLayout_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

            <TextView
                    android:id="@+id/password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="12dp"
                    android:text="@string/register_password_title"
                    android:textColor="@color/text_edit_color"
                    android:textSize="24sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent" />

        </RelativeLayout>
        <com.example.dobble.release.extensions.ui.ValidatableEditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="48dp"
                android:layout_marginRight="48dp"
                android:hint="@string/register_password_placeholder"
                android:inputType="textMultiLine|textPassword"
                android:textColor="@color/text_edit_color"
                android:textColorHint="@color/text_edit_placeholder_color" />
        <TextView
                android:id="@+id/password_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:visibility="invisible"
                android:textColor="@color/validatable_edit_text_border_false"
                android:textSize="18sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

        <RelativeLayout
                android:id="@+id/relLayout_first_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

            <TextView
                    android:id="@+id/first_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="12dp"
                    android:text="@string/register_first_name_title"
                    android:textColor="@color/text_edit_color"
                    android:textSize="24sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent" />

        </RelativeLayout>
        <com.example.dobble.release.extensions.ui.ValidatableEditText
                android:id="@+id/input_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="48dp"
                android:layout_marginRight="48dp"
                android:hint="@string/register_first_name_placeholder"
                android:inputType="textMultiLine|textVisiblePassword"
                android:textColor="@color/text_edit_color"
                android:textColorHint="@color/text_edit_placeholder_color"
                />
        <TextView
                android:id="@+id/first_name_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:visibility="invisible"
                android:textColor="@color/validatable_edit_text_border_false"
                android:textSize="18sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

        <RelativeLayout
                android:id="@+id/relLayout_last_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

            <TextView
                    android:id="@+id/last_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="12dp"
                    android:text="@string/register_last_name_title"
                    android:textColor="@color/text_edit_color"
                    android:textSize="24sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent" />

        </RelativeLayout>
        <com.example.dobble.release.extensions.ui.ValidatableEditText
                android:id="@+id/input_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="48dp"
                android:layout_marginRight="48dp"
                android:hint="@string/register_last_name_placeholder"
                android:inputType="textMultiLine|textVisiblePassword"
                android:textColor="@color/text_edit_color"
                android:textColorHint="@color/text_edit_placeholder_color"
                />
        <TextView
                android:id="@+id/last_name_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:visibility="invisible"
                android:textColor="@color/validatable_edit_text_border_false"
                android:textSize="18sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

        <RelativeLayout
                android:id="@+id/relLayout_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

            <TextView
                    android:id="@+id/city"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="12dp"
                    android:text="@string/register_city_title"
                    android:textColor="@color/text_edit_color"
                    android:textSize="24sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent" />

        </RelativeLayout>
        <com.example.dobble.release.extensions.ui.ValidatableEditText
                android:id="@+id/input_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="48dp"
                android:layout_marginRight="48dp"
                android:hint="@string/register_city_placeholder"
                android:inputType="textMultiLine|textVisiblePassword"
                android:textColor="@color/text_edit_color"
                android:textColorHint="@color/text_edit_placeholder_color"
                />
        <TextView
                android:id="@+id/city_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:visibility="invisible"
                android:textColor="@color/validatable_edit_text_border_false"
                android:textSize="18sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

        <RelativeLayout
                android:id="@+id/relLayout_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

            <TextView
                    android:id="@+id/state"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="12dp"
                    android:text="@string/register_state_title"
                    android:textColor="@color/text_edit_color"
                    android:textSize="24sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent" />

        </RelativeLayout>
        <com.example.dobble.release.extensions.ui.ValidatableEditText
                android:id="@+id/input_state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="48dp"
                android:layout_marginRight="48dp"
                android:hint="@string/register_state_placeholder"
                android:inputType="textMultiLine|textVisiblePassword"
                android:textColor="@color/text_edit_color"
                android:textColorHint="@color/text_edit_placeholder_color"
                />
        <TextView
                android:id="@+id/state_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:visibility="invisible"
                android:textColor="@color/validatable_edit_text_border_false"
                android:textSize="18sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

        <com.example.dobble.release.extensions.ui.ValidatableRadioGroup
                android:id="@+id/radio_group"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal">

            <RadioButton
                    android:id="@+id/radio_male"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/register_radio_male"
                    />

            <RadioButton
                    android:id="@+id/radio_female"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/register_radio_female"
                    />

        </com.example.dobble.release.extensions.ui.ValidatableRadioGroup>

        <Button
                android:id="@+id/dob_button"
                android:padding="15dp"
                android:textColor="@color/color_white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/btn_register"
                android:text="@string/register_dob_button_title" />

        <com.example.dobble.release.extensions.ui.CheckValidatableButton
                android:id="@+id/submit_button"
                android:textColor="@color/color_white"
                android:background="@drawable/btn_register"
                android:textAllCaps="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginBottom="15dp"
                android:text="@string/register_submit" />

    </LinearLayout>

</ScrollView>
